--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       to   { transform: translateY(0);    opacity: 1; }
     }
 
-    /* — Hero Content Box with 0.6s delay — */
+    /* — Hero Content Box with 0s delay — */
     .hero-content {
       position: relative; z-index: 2; text-align: center; color: #fff;
       max-width: 800px; padding: 2rem 1.5rem;
@@ -64,7 +64,8 @@
       box-shadow: 0 8px 24px rgba(0,0,0,0.6); margin: 0 1rem;
       opacity: 0;
       transform: translateY(100vh);
-      animation: slideInUp 2s ease-out 0.6s forwards;
+      /* no delay */
+      animation: slideInUp 2s ease-out forwards;
     }
     .hero-content h1 {
       font-size: 3rem; font-weight: 600;
@@ -76,12 +77,13 @@
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     }
 
-    /* — About Me under header with 0.6s delay — */
+    /* — About Me under header with 0s delay — */
     .hero-bio {
       margin-top: 1.5rem; font-size: 1rem; line-height: 1.6;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
       opacity: 0; transform: translateY(100vh);
-      animation: slideInUp 2s ease-out 0.6s forwards;
+      /* no delay */
+      animation: slideInUp 2s ease-out forwards;
     }
 
     /* — Projects Section — */
@@ -187,7 +189,8 @@
     <!-- Projects -->
     <section id="projects">
       <h2>
-        <i class="fas fa-thumbtack pinned-icon"></i> My Projects
+        My Projects
+        <i class="fas fa-thumbtack pinned-icon"></i>
       </h2>
       <div class="projects-grid"></div>
     </section>
