--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
     <!-- Projects -->
     <section id="projects">
       <h2>
-        My Projects
-        <i class="fas fa-thumbtack pinned-icon"></i>
+        <i class="fas fa-thumbtack pinned-icon"></i> My Projects
       </h2>
       <div class="projects-grid"></div>
     </section>
